# Conways-game-of-life

./: README.md  pyproject.toml
src/Conways-game-of-life/: grid.py
src/conways_game_of_life/: cli.py  grid.py
